Closed Bug 1549321 Opened 6 years ago Closed 6 years ago

Crash in [@ IPCError-browser | RecvCreateAudioIPCConnection CubebUtils::CreateAudioIPCConnection failed]

Categories

(Core :: Audio/Video: cubeb, defect, P2)

Unspecified
Windows 10
defect

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox-esr60 --- wontfix
firefox67 --- wontfix
firefox68 --- wontfix
firefox69 --- fixed

People

(Reporter: gsvelto, Assigned: kinetik)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-865dd2f6-9d4f-455b-9f3e-4ea3b0190505.

Not putting the stack in this one for now because the stacks visible on Socorro are all over the place. I think we're looking at the wrong minidump since there's two in the crash reports. From the signature this is related to this must be related to:

https://searchfox.org/mozilla-central/rev/b2015fdd464f598d645342614593d4ebda922d95/dom/ipc/ContentParent.cpp#4395
https://searchfox.org/mozilla-central/rev/b2015fdd464f598d645342614593d4ebda922d95/dom/media/CubebUtils.cpp#408

I'll try to manually extract a signature later and see what's wrong with Socorro.

Priority: -- → P2

I just noticed the crash report is for Windows 10. We shouldn't be in CreateAudioIPCConnection or anything related to AudioIPC as that code is not yet enabled on Windows, so this crash can only occur if the user has manually set the media.cubeb.sandbox pref to true.

Blocks: 1432303

I misunderstood the purpose of IPC_FAIL() and how it interacts with async IPC. My expectation was that IPC_FAIL() would cause the promise returned by SendCreateAudioIPCConnection() to be rejected. Per bug 1313200 comment 9 through 11, that's not the case.

Assignee: nobody → kinetik
Status: NEW → ASSIGNED
Attachment #9070481 - Attachment is obsolete: true
Attachment #9070481 - Attachment is obsolete: false
Pushed by mgregan@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ecdebbbb2253 Pass AudioIPC init failure back to child rather than IPC_FAIL() killing parent. r=achronop
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69

Crash volume is low enough that I assume we can just let this ride the trains.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: