Bug 1549321 - Pass AudioIPC init failure back to child rather than IPC_FAIL() killing parent.  r=achronop

Differential Revision: https://phabricator.services.mozilla.com/D34105