dom/media/CubebUtils.cpp
@@ -401,14 +401,19 @@ void InitAudioIPCConnection() {
   auto promise = contentChild->SendCreateAudioIPCConnection();
   promise->Then(
       AbstractThread::MainThread(), __func__,
-      [](ipc::FileDescriptor&& aFD) {
+      [](dom::FileDescOrError&& aFD) {
         StaticMutexAutoLock lock(sMutex);
         MOZ_ASSERT(!sIPCConnection);
-        sIPCConnection = new ipc::FileDescriptor(std::move(aFD));
+        if (aFD.type() == dom::FileDescOrError::Type::TFileDescriptor) {
+          sIPCConnection = new ipc::FileDescriptor(std::move(aFD));
+        } else {
+          MOZ_LOG(gCubebLog, LogLevel::Error,
+                  ("SendCreateAudioIPCConnection failed: invalid FD"));
+        }
       },
       [](mozilla::ipc::ResponseRejectReason&& aReason) {
         MOZ_LOG(gCubebLog, LogLevel::Error,
-                ("SendCreateAudioIPCConnection failed: %d", int(aReason)));
+                ("SendCreateAudioIPCConnection rejected: %d", int(aReason)));
       });
 }
 #endif
@@ -469,12 +474,17 @@ cubeb* GetCubebContextUnlocked() {
           ("%s: %s", PREF_CUBEB_SANDBOX, sCubebSandbox ? "true" : "false"));
 
   if (sCubebSandbox) {
-    if (XRE_IsParentProcess()) {
+    if (XRE_IsParentProcess() && !sIPCConnection) {
       // TODO: Don't use audio IPC when within the same process.
-      MOZ_ASSERT(!sIPCConnection);
-      sIPCConnection = new ipc::FileDescriptor(CreateAudioIPCConnection());
-    } else {
-      MOZ_DIAGNOSTIC_ASSERT(sIPCConnection);
+      auto fd = CreateAudioIPCConnection();
+      if (fd.IsValid()) {
+        sIPCConnection = new ipc::FileDescriptor(fd);
+      }
+    }
+    if (NS_WARN_IF(!sIPCConnection)) {
+      // Either the IPC connection failed to init or we're still waiting for
+      // InitAudioIPCConnection to complete (bug 1454782).
+      return nullptr;
     }
 
     AudioIpcInitParams initParams;
